263 useradd is unable to create home directory